# clipcraft

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
clipcraft/: __init__.py  analyze.py  caption.py  cli.py  extract.py  pipeline.py  transcribe.py
tests/: test_clipcraft.py
