[project]
name = "clipcraft"
version = "0.1.0"
description = "AI-powered video clipping CLI — transcribe, find viral moments, extract clips with burned captions"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel Birker" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "faster-whisper>=1.0",
    "openai>=1.0",
    "ffmpeg-python>=0.2",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
clipcraft = "clipcraft.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipcraft"]
